k8S/cart-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartnpservice-srv
spec:
  type: NodePort
  selector:
    app: cartservice
  ports:
    - name: cartservice
      protocol: TCP
      port: 80
      targetPort: 80
