k8S/catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogservice
  template:
    metadata:
      labels:
        app: catalogservice
    spec:
      containers:
        - name: catalogservice
          image: ahmedtoba/catalogservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: catalogservice
  ports:
    - name: catalogservice
      protocol: TCP
      port: 80
      targetPort: 80
