k8S/catalog-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalognpservice-srv
spec:
  type: NodePort
  selector:
    app: catalogservice
  ports:
    - name: catalogservice
      protocol: TCP
      port: 80
      targetPort: 80
