k8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ahmed.com
      http:
        paths:
          - path: /api/catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:
                  number: 80
          - path: /api/c/cart
            pathType: Prefix
            backend:
              service:
                name: cart-clusterip-srv
                port:
                  number: 80
